fix(JEMIL-2) : Fix configuration issues